adding css and remove item helper functions

--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,18 @@
 }
 
 .App-header {
-  background-color:#222;
-  height: 150px;
-  padding: 20px;
+  /*background-color:#222;
   color:#f8f8f8;
+  height: 150px;
+  padding: 20px;}*/
 }
 
-.Todo-App{
-  padding:20px 0 0 0;
+.Todo-App {
   display:inline-block;
+  padding:20px 0 0 0;
   text-align:left;
 }
+
 input{
   font-size:20px;
 }
@@ -31,8 +32,23 @@ li{
   list-style-type:none;
 }
 
+li span.delete-item{
+  visibility:hidden;
+}
+
 .error{
   color:red;
+}
+
+span.delete-item a{
+  color:darkred;
+  font-weight:bold;
+  text-decoration:none;
+ 
+}
+
+li:hover span.delete-item{
+  visibility: visible;
 }
 
 @keyframes App-logo-spin {
