--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
 }
 
 .App-header {
-  /*background-color:#222;
+  background-color:#222;
   color:#f8f8f8;
   height: 150px;
-  padding: 20px;}*/
+  padding: 20px;}
 }
 
 .Todo-App {
