--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,10 @@ li:hover span.delete-item{
   visibility: visible;
 }
 
+.footer a {
+  padding:0 10px 0 10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
